--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portifolio thalyson jose da rosa silva</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
 </head>
 <body>
     <header>
