--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
     <header>
-
+        <nav id="menu">
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">skills</a></li>
+                <li><a href="#">formação</a></li>
+                <li><a href="#">projetos</a></li>
+                <li><a href="#">tema</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
