--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>portifolio thalyson jose da rosa silva</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/08c53b8ed1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">skills</a></li>
-                <li><a href="#">formação</a></li>
-                <li><a href="#">projetos</a></li>
-                <li><a href="#">tema</a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-brain"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-graduation-cap"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-trowel-bricks"></i></a></li>
+                <li><a href="#"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
