corpo do portifolio

--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
     </header>
 
     <main>
-        <h1>em breve</h1>
+        <section id="ficha">
+            <img src="imagens/thalyson perfil.jpg" alt="thalyson" class="foto">
+            <h1>thalyson jose da rosa silva</h1>
+            <p>formado em engenharia da computação com especialização em engenharia da computação sou apaixonado por tecnologia  e tambem sou criador de conteudo onde gravo videos sobre lançamentos do mercado de tecnologia</p>
+            <div id="social">
+                <a href="https://www.linkedin.com/in/thalyson-jos%C3%A9-da-rosa-silva-712a49273/" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/thalyson123ui" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.youtube.com/@thalyson9993" target="_blank" rel="nofollow"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.instagram.com/thalysondarosasilva/" target="_blank" rel="nofollow"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.threads.com/@thalysondarosasilva" target="_blank" rel="nofollow"><i class="fa-brands fa-threads"></i></a>
+            </div>
+        </section>
+
+        <section id="detalhes">
+
+        </section>
     </main>
 
     <footer>
