adicionar sessão de videos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,24 @@
         </section>
 
         <section id="detalhes">
+            <article id="video">
+                <h2> <i class="fa-solid fa-handshake"></i>deixe-me apresentar</h2>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/eUVaQiK58fQ?si=JYvJOcL1VpY-L3aC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </article> <!-- fim article video-->
 
+            <article id="skills">
+                <h2> <i class="fa-solid fa-brain"></i>minhas skills</h2>
+            </article> <!-- fim article skills-->
+
+            <article id="formacao">
+                <h2> <i class="fa-solid fa-graduation-cap"></i>formação</h2>
+            </article> <!-- fim article formacao-->
+
+            <article id="projetos">
+                <h2> <i class="fa-solid fa-trowel-bricks"></i>projetos</h2>
+            </article> <!-- fim article projetos-->
         </section>
     </main>
 
