--- a/index.html
+++ b/index.html
@@ -45,6 +45,142 @@
 
             <article id="skills">
                 <h2> <i class="fa-solid fa-brain"></i>minhas skills</h2>
+
+                <div id="skill-container">
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                 <i class="fa-brands fa-html5"></i> HTML 5
+                            </span>
+
+                            <span class="porcent">
+                                98%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 98%;">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                 <i class="fa-brands fa-css3-alt"></i> CSS 3
+                            </span>
+
+                            <span class="porcent">
+                                97%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 97%;">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                 <i class="fa-solid fa-code"></i> JAVASCRIPT
+                            </span>
+
+                            <span class="porcent">
+                                79%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 79%;">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                            <div class="info">
+                                <span class="nome">
+                                    <i class="fa-solid fa-comments"></i> COMUNICAÇÃO
+                                </span>
+
+                                <span class="porcent">
+                                    50%
+                                </span>
+                            </div>
+                            <div class="barra">
+                                <div class="progresso" style="width: 50%;">
+
+                                </div>
+                            </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                 <i class="fa-solid fa-code"></i> <i class="fa-solid fa-comments"></i> TRABALHO EM EQUIPE 
+                            </span>
+
+                            <span class="porcent">
+                                40%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 40%;">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                            <div class="info">
+                                <span class="nome">
+                                     <i class="fa-solid fa-comments"></i> CRIATIVIDADE
+                                </span>
+
+                                <span class="porcent">
+                                    60%
+                                </span>
+                            </div>
+                            <div class="barra">
+                                <div class="progresso" style="width: 60%;"></div>
+                            </div>
+                            </span>
+                        </div>
+
+                         <div class="item">
+                            <div class="info">
+                                <span class="nome">
+                                      <i class="fa-solid fa-comments"></i> PRODUTIVIDADE
+                                </span>
+
+                                <span class="porcent">
+                                    20%
+                                </span>
+                            </div>
+                            <div class="barra">
+                                <div class="progresso" style="width: 20%;"></div>
+                            </div>
+                            </span>
+                        </div>
+
+                        <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                  <i class="fa-brands fa-java"></i> JAVA 
+                            </span>
+
+                            <span class="porcent">
+                                60%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 60%;">
+
+                            </div>
+                        </div>
+                    </div>
+                    </div>
             </article> <!-- fim article skills-->
 
             <article id="formacao">
@@ -59,7 +195,7 @@
 
     <footer>
 
-    </footer>
+    </footer><div class=
 
     <script src="scripts/script.js"></script>
 </body>
