--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="item">
                         <div class="info">
                             <span class="nome">
-                                 <i class="fa-solid fa-code"></i> <i class="fa-solid fa-comments"></i> TRABALHO EM EQUIPE 
+                                  <i class="fa-solid fa-comments"></i> TRABALHO EM EQUIPE 
                             </span>
 
                             <span class="porcent">
