area de formações

--- a/index.html
+++ b/index.html
@@ -185,6 +185,26 @@
 
             <article id="formacao">
                 <h2> <i class="fa-solid fa-graduation-cap"></i>formação</h2>
+
+                <div id="formacao-container">
+                    <div class="curso">
+                        <p class="periodo">2005 - 2016</p>
+                        <h3 class="instituição">escola luzia sanches diniz</h3>
+                        <p class="titulação">prezinho</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2017 - 2019</p>
+                        <h3 class="instituição">escola estadual jose gomes de morais filho</h3>
+                        <p class="titulação">ensino médio</p>
+                    </div>
+
+                    <div class="curso">
+                        <p class="periodo">2020 - 2023</p>
+                        <h3 class="instituição">unipinhal</h3>
+                        <p class="titulação">bacharelado em engenharia da computação</p>
+                    </div>
+                </div>
             </article> <!-- fim article formacao-->
 
             <article id="projetos">
