--- a/index.html
+++ b/index.html
@@ -208,14 +208,98 @@
             </article> <!-- fim article formacao-->
 
             <article id="projetos">
-                <h2> <i class="fa-solid fa-trowel-bricks"></i>projetos</h2>
+                <h2><i class="fa-solid fa-trowel-bricks"></i>projetos</h2>
+
+                <div id="projeto-container">
+                    <div class="projeto"> <!-- projeto 1 -->
+                        <img src="imagens/projeto 1 videos.png" alt="projeto 1" class="foto">
+
+                        <div class="projeto-info">
+                            <p class="periodo">2018</p>
+                            <h3 class="titulo">projeto de videos</h3>
+                            <p>projeto construido para informar pessoas sobre os lançamentos da tecnologia</p>
+                            <details class="descrição">
+                                <summary>saiba mais...</summary>
+                                <p></p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- projeto 2 -->
+                        <img src="imagens/projeto-02-cordel.jpg" alt="projeto 2" class="foto">
+
+                        <div class="projeto-info">
+                            <p class="periodo">2024</p>
+                            <h3 class="titulo">projeto de cordel</h3>
+                            <p>projeto de uma pagina com um texto de um cordel com imagens paralax</p>
+                            <details class="descrição">
+                                <summary>saiba mais...</summary>
+                                <p></p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- projeto 3 -->
+                        <img src="imagens/projeto-03-android.jpg" alt="projeto 3" class="foto">
+
+                        <div class="projeto-info">
+                            <p class="periodo">2024</p>
+                            <h3 class="titulo">projeto de um site que conta a historia do mascote do android</p>
+                            <details class="descrição">
+                                <summary>saiba mais...</summary>
+                                <p></p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- projeto 4 -->
+                        <img src="imagens/projeto-04-links.jpg" alt="projeto 4" class="foto">
+
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">projeto social</h3>
+                            <p>projeto de um celular com os botões da rede social</p>
+                            <details class="descrição">
+                                <summary>saiba mais...</summary>
+                                <p></p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- projeto 5 -->
+                        <img src="imagens/projeto-05-login.jpg" alt="projeto 5" class="foto">
+
+                        <div class="projeto-info">
+                            <p class="periodo">2024</p>
+                            <h3 class="titulo">projeto tela de login</h3>
+                            <p>projeto de uma formulario de login responsiva </p>
+                            <details class="descrição">
+                                <summary>saiba mais...</summary>
+                                <p></p>
+                            </details>
+                        </div>
+                    </div>
+
+                    <div class="projeto"> <!-- projeto 6 -->
+                        <img src="imagens/projeto 6 album.png" alt="projeto 6" class="foto">
+
+                        <div class="projeto-info">
+                            <p class="periodo">2024</p>
+                            <h3 class="titulo">albuns da formatura</h3>
+                            <p>fotos da minha formatura</p>
+                            <details class="descrição">
+                                <summary>saiba mais...</summary>
+                                <p></p>
+                            </details>
+                        </div>
+                    </div>
             </article> <!-- fim article projetos-->
         </section>
     </main>
 
     <footer>
-
-    </footer><div class=
+        portifolio desenvolvido por <a href="https://github.com/thalyson123ui">thalyson jose da rosa silva</a> em 2025
+    </footer><!-- fim footer-->
 
     <script src="scripts/script.js"></script>
 </body>
