--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
                 <div id="projeto-container">
                     <div class="projeto"> <!-- projeto 1 -->
-                        <img src="imagens/projeto 1 videos.png" alt="projeto 1" class="foto">
+                        <a href="https://www.youtube.com/@thalyson9993" target="_blank"><img src="imagens/projeto 1 videos.png" alt="projeto 1" class="foto"></a>
 
                         <div class="projeto-info">
                             <p class="periodo">2018</p>
@@ -226,7 +226,7 @@
                     </div>
 
                     <div class="projeto"> <!-- projeto 2 -->
-                        <img src="imagens/projeto-02-cordel.jpg" alt="projeto 2" class="foto">
+                        <a href="https://thalyson123ui.github.io/cordel-/" target="_blank"><img src="imagens/projeto-02-cordel.jpg" alt="projeto 2" class="foto"></a>
 
                         <div class="projeto-info">
                             <p class="periodo">2024</p>
@@ -240,7 +240,7 @@
                     </div>
 
                     <div class="projeto"> <!-- projeto 3 -->
-                        <img src="imagens/projeto-03-android.jpg" alt="projeto 3" class="foto">
+                        <a href="https://thalyson123ui.github.io/projeto-android/" target="_blank"><img src="imagens/projeto-03-android.jpg" alt="projeto 3" class="foto"></a>
 
                         <div class="projeto-info">
                             <p class="periodo">2024</p>
@@ -253,7 +253,7 @@
                     </div>
 
                     <div class="projeto"> <!-- projeto 4 -->
-                        <img src="imagens/projeto-04-links.jpg" alt="projeto 4" class="foto">
+                        <a href="https://thalyson123ui.github.io/projeto-social/" target="_blank"><img src="imagens/projeto-04-links.jpg" alt="projeto 4" class="foto"></a>
 
                         <div class="projeto-info">
                             <p class="periodo">2025</p>
@@ -267,7 +267,7 @@
                     </div>
 
                     <div class="projeto"> <!-- projeto 5 -->
-                        <img src="imagens/projeto-05-login.jpg" alt="projeto 5" class="foto">
+                        <a href="https://thalyson123ui.github.io/projeto-login/" target="_blank"><img src="imagens/projeto-05-login.jpg" alt="projeto 5" class="foto"></a>
 
                         <div class="projeto-info">
                             <p class="periodo">2024</p>
