--- a/index.html
+++ b/index.html
@@ -180,6 +180,22 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                  FLUTTER 
+                            </span>
+
+                            <span class="porcent">
+                                60%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 60%;">
+
+                            </div>
+                        </div>
                     </div>
             </article> <!-- fim article skills-->
 
