--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="item">
                         <div class="info">
                             <span class="nome">
-                                  FLUTTER 
+                                  <i class="fa-brands fa-flutter"></i>FLUTTER 
                             </span>
 
                             <span class="porcent">
