--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
                             </span>
                         </div>
                         <div class="barra">
-                            <div class="progresso" style="width: 98%;">
-
-                            </div>
+                            <div class="progresso" style="width: 98%;"></div>
                         </div>
                     </div>
 
@@ -75,9 +73,7 @@
                             </span>
                         </div>
                         <div class="barra">
-                            <div class="progresso" style="width: 97%;">
-
-                            </div>
+                            <div class="progresso" style="width: 97%;"></div>
                         </div>
                     </div>
 
@@ -92,27 +88,23 @@
                             </span>
                         </div>
                         <div class="barra">
-                            <div class="progresso" style="width: 79%;">
-
-                            </div>
+                            <div class="progresso" style="width: 79%;"></div>
                         </div>
                     </div>
 
                     <div class="item">
-                            <div class="info">
-                                <span class="nome">
-                                    <i class="fa-solid fa-comments"></i> COMUNICAÇÃO
-                                </span>
+                        <div class="info">
+                            <span class="nome">
+                                <i class="fa-solid fa-comments"></i> COMUNICAÇÃO
+                            </span>
 
-                                <span class="porcent">
-                                    50%
-                                </span>
-                            </div>
-                            <div class="barra">
-                                <div class="progresso" style="width: 50%;">
-
-                                </div>
-                            </div>
+                            <span class="porcent">
+                                50%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 50%;"></div>
+                        </div>
                     </div>
 
                     <div class="item">
@@ -126,45 +118,41 @@
                             </span>
                         </div>
                         <div class="barra">
-                            <div class="progresso" style="width: 40%;">
-
-                            </div>
+                            <div class="progresso" style="width: 40%;"></div>
                         </div>
                     </div>
 
                     <div class="item">
-                            <div class="info">
-                                <span class="nome">
-                                     <i class="fa-solid fa-comments"></i> CRIATIVIDADE
-                                </span>
+                        <div class="info">
+                            <span class="nome">
+                                 <i class="fa-solid fa-comments"></i> CRIATIVIDADE
+                            </span>
 
-                                <span class="porcent">
-                                    60%
-                                </span>
-                            </div>
-                            <div class="barra">
-                                <div class="progresso" style="width: 60%;"></div>
-                            </div>
+                            <span class="porcent">
+                                60%
                             </span>
                         </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 60%;"></div>
+                        </div>
+                    </div>
 
-                         <div class="item">
-                            <div class="info">
-                                <span class="nome">
-                                      <i class="fa-solid fa-comments"></i> PRODUTIVIDADE
-                                </span>
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                  <i class="fa-solid fa-comments"></i> PRODUTIVIDADE
+                            </span>
 
-                                <span class="porcent">
-                                    70%
-                                </span>
-                            </div>
-                            <div class="barra">
-                                <div class="progresso" style="width: 70%;"></div>
-                            </div>
+                            <span class="porcent">
+                                70%
                             </span>
                         </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 70%;"></div>
+                        </div>
+                    </div>
 
-                        <div class="item">
+                    <div class="item">
                         <div class="info">
                             <span class="nome">
                                   <i class="fa-brands fa-java"></i> JAVA 
@@ -175,28 +163,85 @@
                             </span>
                         </div>
                         <div class="barra">
-                            <div class="progresso" style="width: 60%;">
-
-                            </div>
+                            <div class="progresso" style="width: 60%;"></div>
                         </div>
                     </div>
 
                     <div class="item">
                         <div class="info">
                             <span class="nome">
-                                  <i class="fa-brands fa-flutter"></i>FLUTTER 
+                                  <i class="fa-brands fa-flutter"></i> FLUTTER 
                             </span>
 
                             <span class="porcent">
-                                60%
+                                30%
                             </span>
                         </div>
                         <div class="barra">
-                            <div class="progresso" style="width: 60%;">
-
-                            </div>
+                            <div class="progresso" style="width: 30%;"></div>
                         </div>
                     </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                  <i class="fa-brands fa-python"></i> PYTHON
+                            </span>
+
+                            <span class="porcent">
+                                70%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 70%;"></div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                  <i class="fa-solid fa-code"></i> C
+                            </span>
+
+                            <span class="porcent">
+                                50%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 50%;"></div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                  <i class="fa-solid fa-code"></i> C#
+                            </span>
+
+                            <span class="porcent">
+                                50%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 50%;"></div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="info">
+                            <span class="nome">
+                                  <i class="fa-brands fa-react"></i> REACT.JS
+                            </span>
+
+                            <span class="porcent">
+                                20%
+                            </span>
+                        </div>
+                        <div class="barra">
+                            <div class="progresso" style="width: 20%;"></div>
+                        </div>
+                    </div>
+                </div>
             </article> <!-- fim article skills-->
 
             <article id="formacao">
@@ -260,7 +305,7 @@
 
                         <div class="projeto-info">
                             <p class="periodo">2024</p>
-                            <h3 class="titulo">projeto de um site que conta a historia do mascote do android</p>
+                            <h3 class="titulo">projeto de um site que conta a historia do mascote do android</h3>
                             <details class="descrição">
                                 <summary>saiba mais...</summary>
                                 <p></p>
