--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portifolio thalyson jose da rosa silva</title>
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="modo.dark.css">
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/08c53b8ed1.js" crossorigin="anonymous"></script>
 </head>
@@ -17,7 +16,7 @@
                 <li><a href="#skills" class="link"><i class="fa-solid fa-brain"></i></a></li>
                 <li><a href="#formacao" class="link"><i class="fa-solid fa-graduation-cap"></i></a></li>
                 <li><a href="#projetos" class="link"><i class="fa-solid fa-trowel-bricks"></i></a></li>
-                <li><a href="#" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
+                <li><a href="#" id="botao-tema" class="link"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
